--- a/html1.html
+++ b/html1.html
@@ -70,15 +70,19 @@
             left: 0;
             bottom: 0;
             /* Левый нижний угол */
-            padding: 10px;
+            padding: 2px;
             /* Поля вокруг текста */
-            background: #39b54a;
+            background: #696969;
             /* Цвет фона */
             color: #fff;
             /* Цвет текста */
             width: 100%;
             /* Ширина слоя */
         }
+
+  
+  
+  
 
     </style>
 </head>
@@ -112,6 +116,7 @@
         <h4 align="center">
             На этом сайте вы сможете найти всё об автомобилях и их двигателях.
         </h4>
+       <br>
         <p>Информацию о любых авто и моторах вы найдёте на этом сайте, здесь будет публиковаться информация с разных автомобильных сайтов таких как:
             <br><br><a href="https://www.drive2.ru/" class="btn">Drive2.ru</a>
             <a href="https://ru.wikipedia.org" class="btn1">Wikipedia</a>
@@ -122,10 +127,32 @@
             &copy; Малчак Валентин
             <a href="#"
    onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash">
-   <img src="http://s1.iconbird.com/ico/2013/6/271/w513h5131371296104Facebook.png" width="35" height="35"></a>
+   <img src="http://s1.iconbird.com/ico/2013/6/271/w513h5131371296104Facebook.png" width="25" height="25"></a>
         </div>
     </div>
-
+    </body>
+<body>
+            <h3>-----------------------------------------------------------------------------------------------------------------------</h3>
+    <div class="container">
+        <div class="row">
+    <p><big>Ну а сегодня мы поговорим о Nissan 180SX.</big>
+        <br>Этот ниссан очень ценится в наше время спортсменами,так как может быть и простым гражданским авто,так и при незначительных доработках может превратиться в спортивный снаряд который сможет обгонять авто на класс выше её.<br>Автомобиль построен на так называемом S-шасси.
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Red_240SX_II.jpg/800px-Red_240SX_II.jpg" width="170" height="168" align="left" >Модель продавалась как родственная модель Nissan Silvia с 1989 по 1998 год. Silvia S13 была снята с производства в 1993 году, в то время как 180SX продолжал производиться, и компания Nissan продолжала продавать его еще довольно долго, вплоть до появления следующего поколения Silvia.<img src="http://img.automan.kz/8884/8884497.jpg" width="200" height="190" align="right" >Внешнего тюнинга у этого кузова очень много,многие известные производители Боди-Китов делали обвесы на этот автомобиль.Самый эффектный и известный это обвес от RocketBunny который очень сильно расширяет авто и стоит он не много не мало 3356 долларов,это 89968 гривен или 217т. рублей.Есть и менее известные обвесы которые стоят дешевле но и выглядят ни чуть не хуже.
+        </p>
+    </div>
+    </div>
+    <div class="col-sm">
+        <div class="container">
+            <div class="row">
+        <h3>Двигатель</h3>
+        <p>На эту тачку устанавливали 2 двигателя CA18DET и SR20DE.Со вторым двигателем авто стало очень популярным,так как этот мотор очень хорошо тюнингуется<img src="https://cdn1.bigcommerce.com/server4300/zdk8vvci/products/2931/images/5099/NIS_043_Ti_SR20_Coil_Pack_Cover_Locations__03646.1443716113.1280.1280.jpg?c=2" width="170" height="168" align="left" >первые появившился в октябре 1989 года. Серия была разработана в качестве замены серии двигателей CA.Двигатель SR20DE устанавливался на 15 моделей Nissan и стал самым распространённым из серии SR. Рабочий объём 2,0л (1998 куб.см), с завода SR20DE показывал мощности от 116 (при 4000 об/мин) до 180 л. с. (при 6800 об/мин). Крутящий момент варьировался от 166 Нм при 4000 об/мин до 192 Нм при 5600 об/мин. Степень сжатия 10 — 11.5, диаметр цилиндра и ход поршня по 86 мм.
+        В тюнинге мотор на стоковой поршневой мог развить до 350лс,этот мотор очень крутильный,он может раскрутиться до 8000 оборотов в минуту.
+        У компании Ниссан этот мотор перестал выпускаться в 2002году.<br>Турбированная версия двигателя SR20DET развивал 205 лст при 6000об\мин и имел конфигурацию с несколькими клапанными крышками,эти конфиги отличались мощностью от 5лс до 20лс.
+                </p>
+    </div>
+        </div>
+    </div>
+   
 </body>
 
 </html>
