--- a/html1.html
+++ b/html1.html
@@ -136,7 +136,7 @@
             <h3>-----------------------------------------------------------------------------------------------------------------------</h3>
     <div class="container">
         <div class="row">
-            <h3>Ну а сегодня поговорим о Nissan 180SX</h3>
+            <h3>Поговорим о Nissan 180SX</h3>
        <p>
         <br>Этот ниссан очень ценится в наше время спортсменами,так как может быть и простым гражданским авто,так и при незначительных доработках может превратиться в спортивный снаряд который сможет обгонять авто на класс выше её.<br>Автомобиль построен на так называемом S-шасси.
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Red_240SX_II.jpg/800px-Red_240SX_II.jpg" width="170" height="168" align="left" >Модель продавалась как родственная модель Nissan Silvia с 1989 по 1998 год. Silvia S13 была снята с производства в 1993 году, в то время как 180SX продолжал производиться, и компания Nissan продолжала продавать его еще довольно долго, вплоть до появления следующего поколения Silvia.<img src="http://img.automan.kz/8884/8884497.jpg" width="200" height="190" align="right" >Внешнего тюнинга у этого кузова очень много,многие известные производители Боди-Китов делали обвесы на этот автомобиль.Самый эффектный и известный это обвес от RocketBunny который очень сильно расширяет авто и стоит он не много не мало 3356 долларов,это 89968 гривен или 217т. рублей.Есть и менее известные обвесы которые стоят дешевле но и выглядят ни чуть не хуже.
