--- a/html1.html
+++ b/html1.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
         body {
-            background: #F5F5DC;
+            background: #DCDCDC;
         }
 
         h4 {
@@ -134,22 +134,34 @@
     </body>
 <body>
             <h3>-----------------------------------------------------------------------------------------------------------------------</h3>
+    <div class="col-sm">
     <div class="container">
         <div class="row">
             <h3>Поговорим о Nissan 180SX</h3>
        <p>
         <br>Этот ниссан очень ценится в наше время спортсменами,так как может быть и простым гражданским авто,так и при незначительных доработках может превратиться в спортивный снаряд который сможет обгонять авто на класс выше её.<br>Автомобиль построен на так называемом S-шасси.
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Red_240SX_II.jpg/800px-Red_240SX_II.jpg" width="170" height="168" align="left" >Модель продавалась как родственная модель Nissan Silvia с 1989 по 1998 год. Silvia S13 была снята с производства в 1993 году, в то время как 180SX продолжал производиться, и компания Nissan продолжала продавать его еще довольно долго, вплоть до появления следующего поколения Silvia.<img src="http://img.automan.kz/8884/8884497.jpg" width="200" height="190" align="right" >Внешнего тюнинга у этого кузова очень много,многие известные производители Боди-Китов делали обвесы на этот автомобиль.Самый эффектный и известный это обвес от RocketBunny который очень сильно расширяет авто и стоит он не много не мало 3356 долларов,это 89968 гривен или 217т. рублей.Есть и менее известные обвесы которые стоят дешевле но и выглядят ни чуть не хуже.
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Red_240SX_II.jpg/800px-Red_240SX_II.jpg" width="215" height="200" align="left" >Модель продавалась как родственная модель Nissan Silvia с 1989 по 1998 год. Silvia S13 была снята с производства в 1993 году, в то время как 180SX продолжал производиться, и компания Nissan продолжала продавать его еще довольно долго, вплоть до появления следующего поколения Silvia.<img src="http://img.automan.kz/8884/8884497.jpg" width="215" height="200" align="right" >Внешнего тюнинга у этого кузова очень много,многие известные производители Боди-Китов делали обвесы на этот автомобиль.Самый эффектный и известный это обвес от RocketBunny который очень сильно расширяет авто и стоит он не много не мало 3356 долларов,это 89968 гривен или 217т. рублей.Есть и менее известные обвесы которые стоят дешевле но и выглядят ни чуть не хуже.
         </p>
+        </div>
     </div>
     </div>
     <div class="col-sm">
         <div class="container">
             <div class="row">
         <h3>Двигатель</h3>
-        <p>На эту тачку устанавливали 2 двигателя CA18DET и SR20DE.Со вторым двигателем авто стало очень популярным,так как этот мотор очень хорошо тюнингуется<img src="https://cdn1.bigcommerce.com/server4300/zdk8vvci/products/2931/images/5099/NIS_043_Ti_SR20_Coil_Pack_Cover_Locations__03646.1443716113.1280.1280.jpg?c=2" width="170" height="168" align="left" >первые появившийся в октябре 1989 года. Серия была разработана в качестве замены серии двигателей CA.Двигатель SR20DE устанавливался на 15 моделей Nissan и стал самым распространённым из серии SR. Рабочий объём 2,0л (1998 куб.см), с завода SR20DE показывал мощности от 116 (при 4000 об/мин) до 180 л. с. (при 6800 об/мин). Крутящий момент варьировался от 166 Нм при 4000 об/мин до 192 Нм при 5600 об/мин. Степень сжатия 10 — 11.5, диаметр цилиндра и ход поршня по 86 мм.
-        В тюнинге мотор на стоковой поршневой мог развить до 350лс,этот мотор очень крутильный,он может раскрутиться до 8000 оборотов в минуту.
-        В компании Ниссан этот мотор перестал выпускаться в 2002году.<br>Турбированная версия двигателя SR20DET развивал 205 лст при 6000об\мин и имел конфигурацию с несколькими клапанными крышками,эти конфиги отличались мощностью от 5лс до 20лс.
+        <p>На эту тачку устанавливали 2 двигателя CA18DET и SR20DE.Со вторым двигателем авто стало очень популярным,так как этот мотор очень хорошо тюнингуется<img src="https://cdn1.bigcommerce.com/server4300/zdk8vvci/products/2931/images/5099/NIS_043_Ti_SR20_Coil_Pack_Cover_Locations__03646.1443716113.1280.1280.jpg?c=2" width="215" height="200" align="left" >первые появившийся в октябре 1989 года. Серия была разработана в качестве замены серии двигателей CA.Двигатель SR20DE устанавливался на 15 моделей Nissan и стал самым распространённым из серии SR. Рабочий объём 2,0л (1998 куб.см), с завода SR20DE показывал мощности от 116 (при 4000 об/мин) до 180 л. с. (при 6800 об/мин). Крутящий момент варьировался от 166 Нм при 4000 об/мин до 192 Нм при 5600 об/мин. Степень сжатия 10 — 11.5, диаметр цилиндра и ход поршня по 86 мм.
+        В тюнинге мотор на стоковой поршневой мог развить до 350л.с.,этот мотор очень крутильный,он может раскрутиться до 8000 оборотов в минуту.
+        В компании Ниссан этот мотор перестал выпускаться в 2002году.<br>Турбированная версия двигателя SR20DET развивал 205 л.с. при 6000об\мин и имел конфигурацию с несколькими клапанными крышками,эти конфиги отличались мощностью от 5л.с. до 20л.с.
+                </p>
+    </div>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div class="container">
+            <div class="row">
+                <h3>Результаты в автоспорте</h3>
+                <p>Эти автомобили очень хорошо себи показывают в такой дисциплине как дрифт,их S-шасси очень известно в этом виде спорта,так как
+                    <br>это шасси хорошо приспособлено для дрифта и считается лучшим дрифт шасси в мире по мнению спортсменов<img src="https://i.pinimg.com/236x/e0/65/ef/e065efa4fa081ad12fd73c5b541359b9--nissan-sx-download.jpg" width="250" height="200" align="left" >из-за того что круто рулится в заносе даже на стоковой подвеске,и может показать результат не хуже подготовленых для этого дела авто.Самый яркий пример СХ-а для дрифта это автомобиль чемпиона дрифта в росии Григория Чивчяна "Гочи".<img src="https://scontent.fiev4-1.fna.fbcdn.net/v/t1.0-9/p960x960/60893904_1229317013902506_3964033743651340288_o.jpg?_nc_cat=104&_nc_sid=9e2e56&_nc_ohc=jK6d66-fbN0AX_12L-U&_nc_ht=scontent.fiev4-1.fna&_nc_tp=6&oh=4943d75fb6a5f785ec63b7338ecd86bb&oe=5ED98B65" width="250" height="200" align="right" >У него под капотом тот же SR20 но уже конфигурации не DET a VET.Этот двигатель имеет систему изменяемой фазы газораспределения благодаря системе регулирования высоты и времени подъёма клапанов VVL & VVT. и турбонаддувом Garrett GT2560LS. Это был первый двигатель Nissan с такой системой.Стоковая мощность мотора 276 л.с.Мощность двигателя который стоит у Гочи это 500л.с.Хочется отметить что это не основной автомобиль дрифтера,а учебно-боевой автомобиль,был построен для тренировок во время постройки основной-боевой тачки.Основная машина Чивчяна это сестра по шасси Nissan Silvia S15.В оснойной машине у него в порядке 800л.с. и на этом автомобиле он занял 5 место на мировом чемпионате по дрифту FIA-international в 2017 году. 
                 </p>
     </div>
         </div>
