--- a/html1.html
+++ b/html1.html
@@ -114,7 +114,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://valikin.github.io/other/О авто.html">О авто</a>
+                <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%B0%D0%B2%D1%82%D0%BE">О авто</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://valikin.github.io/other/О моторах.html">О моторах</a>
