--- a/other/О моторах.html
+++ b/other/О моторах.html
@@ -110,10 +110,10 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://valikin.github.io/other/%D0%B8%D1%81%D1%85%D0%BE%D0%B4%D0%BD%D0%B8%D0%BA.html">О авто</a>
+                <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%B0%D0%B2%D1%82%D0%BE.html">О авто</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">О моторах</a>
+                <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%BC%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%85.html">О моторах</a>
             </li>
 
             <li class="nav-item dropdown">
