--- a/other/О моторах.html
+++ b/other/О моторах.html
@@ -110,7 +110,7 @@
 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%B0%D0%B2%D1%82%D0%BE.html">О авто</a>
+                <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%D0%B1%20%D0%B0%D0%B2%D1%82%D0%BE">О авто</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%BC%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%85.html">О моторах</a>
