--- a/other/Об авто.html
+++ b/other/Об авто.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
         body {
-            background: #F5F5DC;
+            background: #DCDCDC;
         }
 
         h4 {
@@ -79,6 +79,9 @@
             width: 100%;
             /* Ширина слоя */
         }
+         img {
+    border: 3px solid #696969;
+   }
         
    .block1 { 
     width: 200px; 
@@ -113,16 +116,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%BC%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%85.html">О моторах</a>
             </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Рядные</a>
-                    <a class="dropdown-item" href="#">V-образные</a>
-                    <a class="dropdown-item" href="#">Оппозитные</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com/mihalych_r/?hl=ru"><img src="https://lh3.googleusercontent.com/2sREY-8UpjmaLDCTztldQf6u2RGUtuyf6VT5iyX3z53JS4TdvfQlX-rNChXKgpBYMw=s180" height="35" width="35"></a>
             </li>
         </ul>
     </nav>
