--- a/html1.html
+++ b/html1.html
@@ -100,8 +100,9 @@
     top: 40px; 
     left: -70px; 
    }       
-        
-  
+     img {
+    border: 3px solid #696969;
+   }     
   </style>
 </head>
 
@@ -116,18 +117,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%BC%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%85.html">О моторах</a>
-            </li>
-            
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Рядные</a>
-                    <a class="dropdown-item" href="#">V-образные</a>
-                    <a class="dropdown-item" href="#">Оппозитные</a>
-                </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com/mihalych_r/?hl=ru"><img src="https://lh3.googleusercontent.com/2sREY-8UpjmaLDCTztldQf6u2RGUtuyf6VT5iyX3z53JS4TdvfQlX-rNChXKgpBYMw=s180" height="35" width="35"></a>
