--- a/other/О моторах.html
+++ b/other/О моторах.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>
         body {
-            background: #F5F5DC;
+            background: #DCDCDC;
         }
 
         h4 {
@@ -79,27 +80,31 @@
             width: 100%;
             /* Ширина слоя */
         }
-        
-   .block1 { 
-    width: 200px; 
-    background: #ccc;
-    padding: 5px;
-    padding-right: 20px; 
-    border: solid 1px black; 
-    float: left;
+
+        .block1 {
+            width: 200px;
+            background: #ccc;
+            padding: 5px;
+            padding-right: 20px;
+            border: solid 1px black;
+            float: left;
+        }
+
+        .block2 {
+            width: 200px;
+            background: #fc0;
+            padding: 5px;
+            border: solid 1px black;
+            float: left;
+            position: relative;
+            top: 40px;
+            left: -70px;
+        }
+         img {
+    border: 3px solid #696969;
    }
-   .block2 { 
-    width: 200px; 
-    background: #fc0; 
-    padding: 5px; 
-    border: solid 1px black; 
-    float: left; 
-    position: relative; 
-    top: 40px; 
-    left: -70px; 
-   }   
-  
-   </style>
+
+    </style>
 </head>
 
 <body>
@@ -114,25 +119,38 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://valikin.github.io/other/%D0%9E%20%D0%BC%D0%BE%D1%82%D0%BE%D1%80%D0%B0%D1%85.html">О моторах</a>
             </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Рядные</a>
-                    <a class="dropdown-item" href="#">V-образные</a>
-                    <a class="dropdown-item" href="#">Оппозитные</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com/mihalych_r/?hl=ru"><img src="https://lh3.googleusercontent.com/2sREY-8UpjmaLDCTztldQf6u2RGUtuyf6VT5iyX3z53JS4TdvfQlX-rNChXKgpBYMw=s180" height="35" width="35"></a>
             </li>
         </ul>
     </nav>
-        <div id="footer">
-            &copy; Малчак Валентин
-            <a href="#"
-   onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash">
-   <img src="http://s1.iconbird.com/ico/2013/6/271/w513h5131371296104Facebook.png" width="35" height="35"></a>
+    <div id="footer">
+        &copy; Малчак Валентин
+        <a href="#" onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash">
+            <img src="http://s1.iconbird.com/ico/2013/6/271/w513h5131371296104Facebook.png" width="35" height="35"></a>
+    </div>
+</body>
+
+<body>
+    <div class="container">
+        <h3 align="center">В этом разделе вы узнаете о различных двигателях</h3>
+        <p>Дви́гатель вну́треннего сгора́ния (ДВС) — разновидность теплового двигателя, в котором топливо сгорает непосредственно в рабочей камере (внутри) двигателя.<img src="https://www.zr.ru/_ah/img/bZDRP91v1LKFyD7U07LbaA=s800" height="215" width="230" align="left"> Тем самым, топливная смесь и является рабочим телом таких двигателей. Такой двигатель является первичным, химическим, и преобразует энергию сгорания топлива в механическую работу</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5>Рядные</h5>
+                <a href="https://valikin.github.io/html1.html" class="btn">Nissan SR20DE/DET/VET</a>
+            </div>
+            <div class="col-sm-4">
+                <h5>V-образные</h5>
+            </div>
+            <div class="col-sm-4">
+                <h5>Оппозитные</h5>
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
