--- a/other/О моторах.html
+++ b/other/О моторах.html
@@ -100,9 +100,10 @@
             top: 40px;
             left: -70px;
         }
-         img {
-    border: 3px solid #696969;
-   }
+
+        img {
+            border: 3px solid #696969;
+        }
 
     </style>
 </head>
@@ -141,7 +142,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h5>Рядные</h5>
-                <a href="https://valikin.github.io/html1.html" class="btn">Nissan SR20DE/DET/VET</a>
+                <a href="https://valikin.github.io/engines/Nissan%20SR20.html" class="btn">Nissan SR20DE/DET/VET</a>
             </div>
             <div class="col-sm-4">
                 <h5>V-образные</h5>
