--- a/other/Об авто.html
+++ b/other/Об авто.html
@@ -128,5 +128,27 @@
    <img src="http://s1.iconbird.com/ico/2013/6/271/w513h5131371296104Facebook.png" width="35" height="35"></a>
         </div>
 </body>
+    <body>
+        <div class="container">
+        <h3 align="center">В этом разделе вы узнаете какеи есть автомобили</h3>
+            <p>Автомоби́ль,Самодвижущийся экипаж—моторное дорожное и вне дорожное транспортное средство, используемое для перевозки людей или грузов.<img src="https://cdn.iz.ru/sites/default/files/styles/900x506/public/news-2019-03/2019-03-05T082416Z_1376841301_RC1DE1765850_RTRMADP_3_AUTOSHOW-GENEVA.JPG.jpg?itok=wvdmAOrP" width="250" height="190" align="right">
+            <br>Основное назначение автомобиля заключается в совершении транспортной работы. Автомобильный транспорт в промышленно развитых странах занимает ведущее место по сравнению с другими видами транспорта по объёму перевозок пассажиров. Современный автомобиль состоит из 15—20 тысяч деталей, из которых 150—300 являются наиболее важными и требующими наибольших затрат в эксплуатации. Понятие включает легковой автомобиль, грузовой автомобиль, автобус, троллейбус, бронетранспортёр, но не включает сельскохозяйственный трактор и мотоцикл.</p>
+        </div>
+        <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5>Японские</h5>
+                <a href="https://valikin.github.io/html1.html" class="btn">Nissan 180SX</a>
+            </div>
+            <div class="col-sm-4">
+                <h5>Американские</h5>
+                <a href="#" class="btn2">Chevrolet Camaro's</a>
+            </div>
+            <div class="col-sm-4">
+                <h5>Европейские</h5>
+            </div>
+        </div>
+        </div>
+    </body>
 
 </html>
