--- a/other/Об авто.html
+++ b/other/Об авто.html
@@ -142,7 +142,7 @@
             </div>
             <div class="col-sm-4">
                 <h5>Американские</h5>
-                <a href="https://valikin.github.io/Autos/Camaro.html" class="btn2">Chevrolet Camaro's</a>
+                <a href="https://valikin.github.io/Autos/Camaro.html" class="btn3">Chevrolet Camaro</a>
             </div>
             <div class="col-sm-4">
                 <h5>Европейские</h5>
